calculadora de prestamos con límite

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /showParam/build/
 /showParam/dist/
 /calculadoraPrestamo/nbproject/private/
+/calculadoraPrestamo/build/
+/calculadoraPrestamo/dist/
