mod 1 and mod 2

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@
 /calculadoraPrestamo/nbproject/private/
 /calculadoraPrestamo/build/
 /calculadoraPrestamo/dist/
+/TiposEstructurados/nbproject/private/
+/TiposEstructurados/build/
+/estrucDecision/nbproject/private/
+/estrucDecision/build/
+/CobroPagos/nbproject/private/
+/CobroPagos/build/
