setters/getters and visibility
Signed-off-by: Hugo Suárez <hugolsg@ext.inditex.com>

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@
 /estrucDecision/build/
 /CobroPagos/nbproject/private/
 /CobroPagos/build/
+/MOD3/VisibilidadAtributos/VisibilidadAtributos/build/
+/MOD3/VisibilidadAtributos_Hugo/nbproject/private/
+/MOD3/VisibilidadAtributos_Hugo/build/
